--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
-<html lang="es">
-    <head> 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name= "robots" content="nofollow">
+    <meta name="description" content="pepe">
+    <meta name="keywords" content="pepo">
+    <title>Document</title>
+ 
         <title>Mi primera pagina</title>
         <style>
             .titulogrande{
@@ -8,7 +16,7 @@
             text-align: center;
             }
         </style>
-    </head>
+</head>
     <body>
         <h1 id="titulo1" class="titulogrande">TITULO 1</h1>
         <p id="parrafo" title="parrafo1">Parrafo 1</p>
@@ -17,6 +25,5 @@
         <h1 id="titulo3" class="titulogrande">TITULO 3</h1>
         <p id="parrafo" style="background-color:rgb(42, 56, 165);"
         onmouseover="alert('Has pinchado en el parrafo 3!')">Parrafo 3</p>
-        
-    </body>
+    </body>    
 </html>
